feat: Animate order with transition groups

--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -22,3 +22,20 @@
     transform translateX(120%)
     max-height 0
     padding 0
+
+.count-enter
+  transition all 2.5s
+  transform translateY(100%)
+  &.count-enter-active
+    transform translateY(0)
+
+.count-leave
+  bottom 0
+  color red
+  left 0
+  position absolute
+  transition all 2.5s
+  transform translateY(0)
+  &.count-leave-active
+    color red
+    transform translateY(-100%)
